# BurgerTime

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GitVersion.yml  README.md  compile_commands.json
.github/workflows/: cmake.yml  emscripten.yml
Include/: AchievementManager.hpp  Colors.hpp  Constants.hpp  CustomEvents.hpp  EventManager.hpp  GameEvents.hpp  GameScenes.hpp  StateMachine.hpp
Include/Commands/: MoveCommand.hpp
Include/Components/: BurgerPart.hpp  CacheComponent.hpp  Enemy.hpp  EnemyAI.hpp  EnemySpawner.hpp  Entity.hpp  HealthComponent.hpp  HealthDisplay.hpp  HighScore.hpp  InitialsInput.hpp  LeaderBoard.hpp  MoveComponent.hpp  Pepper.hpp  PepperDisplay.hpp  Plate.hpp  Player.hpp  PlayerController.hpp  Score.hpp  ScoreComponent.hpp  Stage.hpp  StartMenu.hpp
Include/Services/: GameState.hpp
Include/States/: BurgerPartStates.hpp  EnemyStates.hpp  PlayerStates.hpp
Minigin/: Component.cpp  GameObject.cpp  GameObject.h  Main.cpp  Minigin.cpp  Scene.cpp  Scene.h  SceneManager.cpp  TextObject.cpp  TextObject.h
Minigin/Components/: TextComponent.cpp
Resources/: highscores.json
Resources/Stages/: stage1.json  stage2.json  stage3.json
Source/: AchievementManager.cpp  GameScenes.cpp  Main.cpp
Source/Commands/: MoveCommand.cpp
Source/Components/: BurgerPart.cpp  CacheComponent.cpp  Enemy.cpp  EnemyAI.cpp  EnemySpawner.cpp  Entity.cpp  HealthComponent.cpp  HealthDisplay.cpp  HighScore.cpp  InitialsInput.cpp  LeaderBoard.cpp  MoveComponent.cpp  Pepper.cpp  PepperDisplay.cpp  Plate.cpp  Player.cpp  PlayerController.cpp  Score.cpp  ScoreComponent.cpp  Stage.cpp  StartMenu.cpp  StartMenu.hpp
Source/Services/: GameState.cpp
Source/States/: BurgerPartStates.cpp  EnemyStates.cpp  PlayerStates.cpp
Web/: index.html
engine/: AchievementManager.cpp  AchievementManager.h  Command.h  Component.h  EventManager.cpp  EventManager.h  Events.h  GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h  InputManagerImpl_SDL.cpp  Main.cpp  Minigin.cpp  Minigin.h  Renderable.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Texture2D.cpp  Texture2D.h  Transform.cpp  Transform.h  sdbm.hpp
engine/commands/: CallbackCommand.cpp  CallbackCommand.h  GameObjectCommand.cpp  GameObjectCommand.h  MoveCommand.cpp  MoveCommand.h
engine/components/: Animation.cpp  Animation.h  CacheComponent.cpp  CacheComponent.h  FpsComponent.cpp  FpsComponent.h  HealthComponent.cpp  HealthComponent.h  PlayerController.cpp  PlayerController.h  RenderComponent.cpp  RenderComponent.h  RotatorComponent.cpp  RotatorComponent.h  ScoreComponent.cpp  ScoreComponent.h  Sprite.cpp  Sprite.h  SpriteComponent.cpp  SpriteComponent.h  SpriteSheetComponent.cpp  SpriteSheetComponent.h  TextComponent.cpp  TextComponent.h  UIComponent.cpp  UIComponent.h
